<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu_title"/>

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar_menu_title"/>

    <item
        android:id="@+id/fab"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_wallet"
        android:title="@string/wallet_menu_title"/>

    <item
        android:id="@+id/analyticsFragment"
        android:icon="@drawable/ic_analytics"
        android:title="@string/analytics_menu_title"/>

</menu>