<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/note_background"
    android:padding="7dp"
    android:layout_marginBottom="20sp">

    <TextView
        android:id="@+id/note_time"
        android:paddingVertical="8dp"
        android:paddingHorizontal="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/slate"
        android:textSize="14sp"
        android:text="@string/default_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/note_title"
        android:layout_width="wrap_content"
        android:maxWidth="70sp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/default_note_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:singleLine="false"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/note_time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="160sp"
        android:textSize="12sp"
        android:text="@string/default_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>